--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "dev": "nodemon server.js",
     "test": "node scraper.js"
   },
-  "keywords": ["basketball", "stats", "scraper", "badalones"],
+  "keywords": [
+    "basketball",
+    "stats",
+    "scraper",
+    "badalones"
+  ],
   "author": "",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "node-cron": "^3.0.3",
     "dotenv": "^16.3.1",
-    "lowdb": "^7.0.1"
+    "express": "^4.21.2",
+    "lowdb": "^7.0.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
